Fix the god-awful alignment of buttons in the preview dropdown.

--- a/MedicationsShortagesDashboard/Content/style.css
+++ b/MedicationsShortagesDashboard/Content/style.css
@@ -376,7 +376,10 @@ div.container
         border:1px solid;
         border-radius:5px;
         border-color: #3c6697;
-        margin:20px;
+        margin-left: 8px;
+        margin-top: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
     }
 
         .preview button:hover {
